--- a/UACSView/View_Parking/SelectCoilByL3Form.resx
+++ b/UACSView/View_Parking/SelectCoilByL3Form.resx
@@ -132,6 +132,9 @@
   <metadata name="MAT_CNAME2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="CAR_NO2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="PLAN_NO2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -197,7 +200,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEQAACxEBf2RfkQAAAZVJREFUeF7t2C1OA0EA
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEAAACxABrSO9dQAAAZVJREFUeF7t2C1OA0EA
         R3Eq17WuSHoAQAMG0gtQoCRcgRAkIakgJJyGBNEjQKiAIGp6gooaDKKqghWjZsXOS/YjkPfPs5Ps/Lam
         u/Wz3lhiYoHEAokFEgskFkgskFggsUBigcQCtY/1NV+8vn+ktFx9R2cbrn2sg8OjTtqeX6bR2YYTCyQW
         SCyQWCCxQGKBxAKJBRILJBZILJBYILFAYoHEAokFEgskFkgskFggsUBigcQCiQUSCyQWSCyQWCCxQGKB
@@ -254,7 +257,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEQAACxEBf2RfkQAAAStJREFUeF7t1zFqAmEU
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEAAACxABrSO9dQAAAStJREFUeF7t1zFqAmEU
         RtFkKXEZMU2CKwhBIVuQ4BYk4IZTWFlE0Gqm+S9YDefjbuCd7j39nS8aDFYIVghWCFYIVghWCFYIVghW
         CFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghWCFYIVghW
         CFYIVghWaAjr+Ht6/9gsu/3PYXL1vCGs7e77eel7Xb9Nrp4H6z5YYbDCYIXBCoMVBisMVhisMFhhsMJg
