--- a/UACSView/View_CraneMonitor/MaterialCellManage.resx
+++ b/UACSView/View_CraneMonitor/MaterialCellManage.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,38 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="BtnOk.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAAAgCAYAAADkK90uAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAD+SURBVGhD7dhZRgUAGAXgf2mHRCKRSCQqDZI0Sa4m
-        102SJEnSIprnus3Drk5nGefhPHyb+Kp1+gdheKjmyS+E4aE2jn8gDA+1dvQNYXioxuEXhOGhVg4+IQwP
-        tbz/AWF4qMW9DwjDQ83vvkMYHmp25w3C8FAz268Qhoea3mpDGB5qsvUCYXio8eYzhOGhRjefIAwPNbz6
-        CGF4qI6JMwjDQ3VOnUMYHqpr+gLC8FDdM5cQhofqmb2CMDxU79w1hOGh+hZuIAwP1b90C2F4qIHlOwjD
-        Qw2u3EMYHmqo8QBheMhlmamR9ScIw0ONbT5DGB5qovkCYXioqVYbwnDQ5j+vaK3lNpjqpgAAAABJRU5E
-        rkJggg==
-</value>
-  </data>
-  <data name="BtnClose.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAAAgCAYAAADkK90uAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAD+SURBVGhD7dhZRgUAGAXgf2mHRCKRSCQqDZI0Sa4m
-        102SJEnSIprnus3Drk5nGefhPHyb+Kp1+gdheKjmyS+E4aE2jn8gDA+1dvQNYXioxuEXhOGhVg4+IQwP
-        tbz/AWF4qMW9DwjDQ83vvkMYHmp25w3C8FAz268Qhoea3mpDGB5qsvUCYXio8eYzhOGhRjefIAwPNbz6
-        CGF4qI6JMwjDQ3VOnUMYHqpr+gLC8FDdM5cQhofqmb2CMDxU79w1hOGh+hZuIAwP1b90C2F4qIHlOwjD
-        Qw2u3EMYHmqo8QBheMhlmamR9ScIw0ONbT5DGB5qovkCYXioqVYbwnDQ5j+vaK3lNpjqpgAAAABJRU5E
-        rkJggg==
-</value>
-  </data>
-  <data name="btnClear.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAAAgCAYAAADkK90uAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAD+SURBVGhD7dhZRgUAGAXgf2mHRCKRSCQqDZI0Sa4m
-        102SJEnSIprnus3Drk5nGefhPHyb+Kp1+gdheKjmyS+E4aE2jn8gDA+1dvQNYXioxuEXhOGhVg4+IQwP
-        tbz/AWF4qMW9DwjDQ83vvkMYHmp25w3C8FAz268Qhoea3mpDGB5qsvUCYXio8eYzhOGhRjefIAwPNbz6
-        CGF4qI6JMwjDQ3VOnUMYHqpr+gLC8FDdM5cQhofqmb2CMDxU79w1hOGh+hZuIAwP1b90C2F4qIHlOwjD
-        Qw2u3EMYHmqo8QBheMhlmamR9ScIw0ONbT5DGB5qovkCYXioqVYbwnDQ5j+vaK3lNpjqpgAAAABJRU5E
-        rkJggg==
-</value>
-  </data>
+  <metadata name="ROW_INDEX1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="MAT_CODE1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ROW_INDEX2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="GRID_NO2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="GRID_STATUS2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="MAT_CODE2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="MAT_WGT2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
