--- a/UACSView/View_CraneMonitor/Z01_library_Monitor.resx
+++ b/UACSView/View_CraneMonitor/Z01_library_Monitor.resx
@@ -133,7 +133,10 @@
     <value>474, 17</value>
   </metadata>
   <metadata name="timer_InitializeLoad.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>637, 16</value>
+    <value>613, 18</value>
+  </metadata>
+  <metadata name="timerPlanout.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>779, 18</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>68</value>
